objects/Employee_Certification__c.object
<CustomObject>
    <description>Certification that an Employee has assigned or completed.</description>
    <fields>
        <fullName>Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Certification</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Certification__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Please select Active Certification.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Employee Certification</relationshipLabel>
        <relationshipName>Employee_Certification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Certified__c</fullName>
        <label>Date Certified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Employee_Information__c.Status_Del__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Please select Active Employee only.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Employee_Information__c</referenceTo>
        <relationshipLabel>Employee Certification</relationshipLabel>
        <relationshipName>Employee_Certification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>CASE(Certification__r.Type__c, &quot;Certifications&quot;, &quot;Certifications&quot;, &quot;Certification Elements&quot;, &quot;Certification Elements&quot;, &quot;Other Required Training&quot;, &quot;Other Required Training&quot;, &quot; &quot;)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Employee Certification</label>
    <nameField>
        <displayFormat>ECT - {0000}</displayFormat>
        <label>EmpCertification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Certification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>